--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
     android:keepScreenOn="true"
     android:orientation="vertical">
 
+
     <fragment
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         tools:context="com.example.mapwithmarker.MapsMarkerActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
+        android:id="@+id/ARFragment"
         android:name="com.example.ar_app.CustomArFragment"
         />
 
